# SuperconGAN

./: .travis.yml  LICENSE  README.md  conditional.py  load_data.py  models.py  read_data.py  setup.cfg  setup.py  test1.py  transformer.py
SuperconGAN/: GAN.py  __init__.py  __main__.py  base_constraints.py  conditional.py  ctgan.py  data.py  errors.py  evaluate.py  get_data.py  model.py  models.py  real_ctgan.py  sampler.py  synthesizer.py  table_metadata.py  tabular_base.py  test.py  transformer.py  validate.py
data_processing/eval_scores/: data.txt  graph3.py
data_processing/gen&disc_losses/: file1.txt  file2.txt  file3.txt  graph1.py  graph2.py
paper/: #citations.bib#  #paper.tex#  .#citations.bib  citations.bib  latexdockercmd.sh  main.tex  paper.bbl  paper.run.xml  paper.tex
tests/: test_1.py
