[metadata]
name = SuperconGAN
version = 0.0.3
author = Rajeev Atla
author_email = rajeev@rajeevatla.com
description = GAN trained on superconductivity data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RajeevAtla/SuperconGAN
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6